Fix EZP-21182: Implement the FormView view and add it the ContentEditView !squash Fixes according to review in progress...

--- a/Resources/public/css/contenteditformview.css
+++ b/Resources/public/css/contenteditformview.css
@@ -15,6 +15,7 @@
     cursor: pointer;
     position:relative;
     top: 0.6em;
+    width: auto;
 }
 
 .ez-view-contenteditformview .fieldgroup-fields {
